--- a/subvt/src/main/AndroidManifest.xml
+++ b/subvt/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SubVT"
-        tools:targetApi="34"
-        tools:replace="android:allowBackup">
+        android:windowSoftInputMode="adjustResize"
+        tools:replace="android:allowBackup"
+        tools:targetApi="34">
         <activity
             android:name=".MainActivity"
             android:exported="true"
