Onboarding and app structure progress.

--- a/subvt/src/main/AndroidManifest.xml
+++ b/subvt/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:replace="android:allowBackup"
         tools:targetApi="34">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.SubVT">
             <intent-filter>
