--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -26,3 +26,7 @@ jobs:
       - name: ktlint
         run: ktlint --reporter=checkstyle,output=build/ktlint-report.xml
         continue-on-error: true
+      - uses: yutailang0119/action-ktlint@v3
+        with:
+          report-path: build/*.xml # Support glob patterns by https://www.npmjs.com/package/@actions/glob
+          continue-on-error: false # If annotations contain error of severity, action-ktlint exit 1.
