Firebase notifications initial setup.

--- a/subvt/src/main/AndroidManifest.xml
+++ b/subvt/src/main/AndroidManifest.xml
@@ -16,6 +16,25 @@
         android:windowSoftInputMode="adjustResize"
         tools:replace="android:allowBackup"
         tools:targetApi="34">
+
+        <service
+            android:name=".notification.NotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/blue" />
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
