Add sceneview-android submodule.

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,7 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+
+# filament settings for the sceneview
+com.google.android.filament.tools-dir=/Users/kukabi/Documents/development/android/filament
+com.google.android.filament.exclude-vulkan=true
