--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,6 @@
 [*.{kt,kts}]
-ktlint_function_naming_ignore_when_annotated_with=Composable
+ktlint_function_naming_ignore_when_annotated_with = Composable
 indent_size = 4
+
+[/sceneview-android/**.*]
+ktlint_standard = disabled
